test/corpus/L1/positive/literal-string-empty.st
"---
id: literal-string-empty
kind: positive
phase: parse
layer: L1
spec: anexoA:literal.string
origin: spec-ANSI
section: literal.string
note: string vacío '' — value '' (rama distinta del escape '' interior)
---"
''
