test/corpus/L1/negative/unterminated-string.st
"---
id: unterminated-string
kind: negative
phase: lex
layer: L1
spec: anexoA:error.unterminated-string
origin: spec-ANSI
section: error.unterminated-string
codes: E_UNTERMINATED_STRING
---"
'abc
